# page-capture

./: .gitignore  .run_history.json  AGENTS.md  Dockerfile  Makefile  README.md  analysis.py  app.py  config.yaml  debug.txt  extraction.py  geocode.py  importers.py  launch.bat  opencode.json  packages.txt  page_capture.py  project.py  pyproject.toml  render.yaml  requirements.txt  run_capture.py  runners.py  state.py  templates.py  test_scrapy_run.py  theme.yaml
.github/workflows/: capture.yml
.opencode/: opencode.json
.opencode/agents/: api-writer.md  page-capture-lead.md  seleniumbase-cdp.md  streamlit-ui.md
.opencode/plans/: crawl4ai-integration.md  project-learnings.md  ui-wireframes.md
app_pages/: blog_audit.py  capture.py  content.py  dashboard.py  history.py  projects.py  rule_sets.py  seo_analysis.py  seo_health.py  settings.py
components/: progress.py  results_viewer.py
pages/: capture.py  dashboard.py  history.py  projects.py  rule_sets.py  seo_analysis.py  settings.py
rulesets/: dealeron_blog.json  generic_blog.json  standard_seo.json  wix_blog.json  wordpress_blog.json
tests/: conftest.py  test_analysis.py  test_extraction.py  test_importers.py  test_runners_helpers.py  test_scrapy_runner.py
