[project]
name = "page-capture"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.42",
    "seleniumbase>=4.36.0",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "img2pdf>=0.5",
    "Pillow>=10.0",
    "fpdf2>=2.8.0",
    "curl_cffi>=0.15",
    "lxml>=5.0",
    "openpyxl>=3.1.5",
    "trafilatura>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
include = ["app.py", "runners.py", "extraction.py", "importers.py", "page_capture.py", "analysis.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
]
